--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bignumber.js": "^9.1.2",
     "readline": "^1.3.0",
     "ws": "^8.18.0",
-    "yargs": "17.7.2"
+    "yargs": "17.7.2",
+    "tsup": "^8.3.5"
   },
   "engines": {
     "node": ">=22"
