--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
- "build": "tsup src/index.ts --format esm --dts",
+    "build": "tsup src/index.ts --format esm --dts",
     "start": "tsc && node --loader ts-node/esm src/index.ts",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all"
@@ -23,13 +23,15 @@
     "@ai16z/plugin-node": "v0.1.4-alpha.3",
     "@ai16z/plugin-solana": "v0.1.4-alpha.3",
     "@ai16z/plugin-starknet": "v0.1.4-alpha.3",
+    "@solana/spl-token": "^0.4.12",
+    "@solana/web3.js": "^1.98.0",
     "better-sqlite3": "^11.5.0",
     "bignumber": "1.1.0",
     "bignumber.js": "^9.1.2",
     "readline": "^1.3.0",
+    "tsup": "^8.3.5",
     "ws": "^8.18.0",
-    "yargs": "17.7.2",
-    "tsup": "^8.3.5"
+    "yargs": "17.7.2"
   },
   "engines": {
     "node": ">=22"
